# flirpy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  MANIFEST.in  README.md  Test Boson.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py  test-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help.md
.github/workflows/: publish.yaml  python-package.yaml
docs/: Makefile  conf.py  index.rst  make.bat
docs/getting_started/: cameras.rst  index.rst  seq.rst  toc.rst
examples/: capture_lepton.py  example_radiometric.tiff  plot_gps.py  random_targets.ipynb  split_seq.py
find_cameras/: find_cameras.sln
find_cameras/find_cameras/: find_cameras.cpp  find_cameras.vcxproj  find_cameras.vcxproj.filters  stdafx.cpp
flirpy/: tau.py  tau_config.py
flirpy/camera/: boson.py  core.py  lepton.py  tau.py  threadedboson.py  threadedcamera.py  timedservice.py
flirpy/io/: fff.py  seq.py  teax.py  tfc.py
flirpy/util/: encode.py  exiftool.py  raw.py
scripts/: split_seqs
src/flirpy/camera/: boson.py  core.py  lepton.py  tau.py  tau_config.py  threadedboson.py  threadedcamera.py  timedservice.py
src/flirpy/io/: fff.py  seq.py  teax.py
src/flirpy/util/: encode.py  exiftool.py  raw.py
test/: test_boson.py  test_exiftool.py  test_fff.py  test_lepton.py  test_seq_split.py  test_tau.py  test_teax.py  test_thermalgrabber.py  test_threaded_boson.py
test/test_data/: frame_000000.fff  frame_000000.txt  frame_000000_le.fff
