[project]
name = "flirpy"
description = "Flirpy"
version = "0.4.0"
authors = [
    { name = "Josh Veitch-Michaelis", email = "jveitchmichaelis@gmail.com" }
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage-badge"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.MASTER]
py-version = "3.10"
jobs = 2
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.typing"]
disable = ["line-too-long"]

[tool.pytest.ini_options]
addopts = [
    "-x",
    "--junitxml=reports/junit/junit.xml",
    "--cov=flirpy",
    "--color=yes",
    "--verbose",
    "--durations=0"
]
testpaths = [
    "test"
]

filterwarnings = [
    "ignore::DeprecationWarning"
]