[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flirpy"
description = "Flirpy"
version = "0.4.0"
authors = [
    { name = "Josh Veitch-Michaelis", email = "jveitchmichaelis@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<2.4",
    "natsort",
    "pillow",
    "psutil",
    "pyftdi",
    "pyserial",
    "pyusb",
    "libusb",
    "tqdm>4.29",
    "opencv-python-headless>=4.12",
    "pyudev; sys_platform == 'linux'",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage-badge",
    "coverage",
]
dev = [
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flirpy"]

[tool.hatch.build.targets.wheel.force-include]
"src/flirpy/bin" = "flirpy/bin"

[tool.ruff]
exclude = ["Untitled.ipynb"]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "PL"]
ignore = [
    "E501",    # line too long (covered by formatter)
    "PLR2004", # magic value comparisons (noisy for protocol/hardware code)
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
]

[tool.pytest.ini_options]
addopts = [
    "-x",
    "--junitxml=reports/junit/junit.xml",
    "--cov=flirpy",
    "--color=yes",
    "--verbose",
    "--durations=0"
]
testpaths = [
    "test"
]

filterwarnings = [
    "ignore::DeprecationWarning"
]
